--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@maptiler/client": "^1.8.1",
     "bootstrap": "^5.3.3",
     "bs-custom-file-input": "^1.3.4",
     "cloudinary": "^1.41.3",
