Add database connection URL to environment variables and update app.js for MongoDB connection

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ CLOUDINARY_CLOUD_NAME=dq2to8sns
 CLOUDINARY_API_KEY=637136773463446
 CLOUDINARY_API_SECRET=LEkQa9Oa6inwdCjWzxbNihCuA44
 MAPTILER_API_KEY=grPRhZYC8wly9xDGI173
+DB_URL = mongodb+srv://benbasty:qjbxnbJsx6JV1NlQ@bendevelopercluster.xskldfc.mongodb.net/?retryWrites=true&w=majority&appName=BenDeveloperCluster
